fix: corrects text overflow at low resolutions

--- a/css/blocks/profile/__name/profile__name.css
+++ b/css/blocks/profile/__name/profile__name.css
@@ -16,5 +16,6 @@
     line-height: 33px;
     margin-right: 10px;
     padding-left: 25px;
+    max-width: 189px;
   }
 }
