--- a/css/blocks/profile/__position/profile__position.css
+++ b/css/blocks/profile/__position/profile__position.css
@@ -15,5 +15,6 @@
     margin-top: 9px;
     font-size: 14px;
     line-height: 17px;
+    max-width: 282px;
   }
 }
